# pysam-stubs

./: README.md  setup.cfg
pysam-stubs/: __init__.pyi
