[metadata]
name = pysam-stubs
version = 0.18.0.0.1
author = Marcel Martin
author_email = marcel.martin@scilifelab.se
url = https://github.com/marcelm/pysam-stubs/
classifiers =
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
long_description = file: README.md
longe_description_content_type = text/markdown
license = CC0

[options]
zip_safe = False
python_requires = >=3.6
packages = pysam-stubs

[options.package_data]
* = *.pyi
